--- a/geowebcache/core/pom.xml
+++ b/geowebcache/core/pom.xml
@@ -116,7 +116,7 @@
       <artifactId>jt-utilities</artifactId>
       <exclusions>
          <exclusion>
-            <groupId>com.vividsolutions</groupId>
+            <groupId>org.locationtech.jts</groupId>
             <artifactId>jts</artifactId>
          </exclusion>
       </exclusions>
